# streamlit-demo

./: .env  .gitignore  Makefile  README.md  pyproject.toml
src/: remove.py
src/config/: settings.py
