[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Flavien HUGS <flavienhugs@pm.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.0"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
